refactor: refactor shouldRaiseTrucoIfIHaveZapAndCopasAndLostTheFirstRound test to use mock