@@ -600,12 +600,10 @@ public class PatoBotTest {
     @Test
     @DisplayName("Should raise 'Truco' if i have 'Zap' and 'Copas' and lost the first round")
     public void shouldRaiseTrucoIfIHaveZapAndCopasAndLostTheFirstRound() {
-        TrucoCard card1 = TrucoCard.of(CardRank.KING, CardSuit.HEARTS);
-        TrucoCard card2 = TrucoCard.of(CardRank.KING, CardSuit.CLUBS);
-        TrucoCard vira = TrucoCard.of(CardRank.JACK, CardSuit.SPADES);
-        when(intel.getRoundResults()).thenReturn(List.of(GameIntel.RoundResult.LOST));
-        when(intel.getCards()).thenReturn(Arrays.asList(card1, card2));
-        when(intel.getVira()).thenReturn(vira);
+        card1 = TrucoCard.of(CardRank.KING, CardSuit.HEARTS);
+        card2 = TrucoCard.of(CardRank.KING, CardSuit.CLUBS);
+        vira = TrucoCard.of(CardRank.JACK, CardSuit.SPADES);
+        setupCardsViraAndRoundResult(Arrays.asList(card1, card2), vira, List.of(GameIntel.RoundResult.LOST));
         assertThat(patoBot.getRaiseResponse(intel)).isEqualTo(1);
     }
 
